# ostia

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  test-config.yaml
crates/ostia-cli/: Cargo.toml
crates/ostia-cli/src/: main.rs  serve.rs
crates/ostia-cli/tests/: auth_status.rs  builtins.rs  cli_output.rs  credential_env_file.rs  credential_http.rs  credential_providers.rs  docker.rs  env_injection.rs  landlock.rs  mcp_auth.rs  mcp_endpoints.rs  mcp_errors.rs  mcp_http.rs  mcp_http_bind.rs  mcp_profile_dispatch.rs  mcp_profile_tools.rs  mcp_stdio.rs  seccomp.rs  streaming.rs
crates/ostia-cli/tests/common/: mod.rs
crates/ostia-cli/tests/mcp_common/: mod.rs
crates/ostia-core/: Cargo.toml
crates/ostia-core/src/: auth.rs  builtins.rs  config.rs  credentials.rs  lib.rs  matcher.rs
crates/ostia-core/tests/: credential_presets.rs
crates/ostia-sandbox/: Cargo.toml
crates/ostia-sandbox/src/: execute.rs  landlock.rs  lib.rs  namespace.rs  resolve.rs  seccomp.rs
crates/ostia-sandbox/tests/: streaming_api.rs
docker/: config.yaml
specs/: launch-checklist.md
specs/001-ostia-core/: plan.md  spec.md  technical.md
specs/002-per-profile-tools/: plan.md  test-plan.md
specs/003-credential-providers/: plan.md
specs/research/: competitive-landscape.md
