[workspace]
members = [
    "crates/ostia-core",
    "crates/ostia-sandbox",
    "crates/ostia-cli",
]
resolver = "2"

[workspace.dependencies]
nix = { version = "0.29", features = ["sched", "mount", "process", "signal", "fs", "user"] }
libc = "0.2"
goblin = "0.10"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
glob = "0.3"
landlock = "0.4"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
