[package]
name = "ostia-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ostia"
path = "src/main.rs"

[dependencies]
ostia-core = { path = "../ostia-core" }
ostia-sandbox = { path = "../ostia-sandbox" }
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "io-std", "net"] }
axum = "0.8"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
aes-gcm = "0.10"
base64 = "0.22"
nix = { workspace = true }
